force-app/main/default/objects/Persona_Permission_Mapping__mdt/Persona_Permission_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains the Mapping of Persona to Role, Permission Set and Public Groups</description>
    <label>Persona Permission Mapping</label>
    <pluralLabel>Persona Permission Mappings</pluralLabel>
</CustomObject>