force-app/main/default/objects/Persona_Permission_Mapping__mdt/fields/Permission_Set_Api_Names__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Api_Names__c</fullName>
    <label>Permission Set Api Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>