force-app/main/default/objects/Persona_Permission_Mapping__mdt/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>