force-app/main/default/objects/Persona_Permission_Mapping__mdt/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <label>Public Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>