force-app/main/default/objects/Persona_Permission_Mapping__mdt/listViews/All_fields_View.listView-meta.xml
<ListView>
    <fullName>All_fields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Persona__c</columns>
    <columns>Role__c</columns>
    <columns>Permission_Set_Api_Names__c</columns>
    <columns>Public_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields View</label>
</ListView>